documentation: fix paragraph alignment

--- a/doc/stylesheet.css
+++ b/doc/stylesheet.css
@@ -56,8 +56,8 @@ p, div.dynheader {
     margin: 0 auto;
     margin-top: 6px;
     margin-bottom: 6px;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 12px;
+    padding-right: 12px;
 }
 
 ul {
@@ -82,4 +82,9 @@ address.footer {
 
 div#navrow1.tabs {
         position: relative;
+}
+
+div.fragment {
+    padding: 4px 12px;
+    margin: 4px 0px 4px 0px;
 }
